deploy/cscs/auth-authelia/authelia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eoapi-dev-authelia
  namespace: eoapi-dev
  labels:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/part-of: eoapi-dev-auth-authelia
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/part-of: eoapi-dev-auth-authelia
  ports:
    - name: http
      port: 9091
      targetPort: http
