deploy/cscs/auth-authelia/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eoapi-dev-oauth2-proxy
  namespace: eoapi-dev
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: eoapi-dev-auth-authelia
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: eoapi-dev-auth-authelia
  ports:
    - name: http
      port: 4180
      targetPort: http
